ACTUALLY fixed educational game image alignment

--- a/bootstrap-4.1.3-dist/css/bootstrap.css
+++ b/bootstrap-4.1.3-dist/css/bootstrap.css
@@ -481,6 +481,9 @@ mark,
 .img-fluid {
   max-width: 100%;
   height: auto;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
 
 .img-thumbnail {
